updating of the footer's height

--- a/css/contact.css
+++ b/css/contact.css
@@ -8,7 +8,6 @@ ul li {
 }
 
 a {
-
     font-size: 25px;
     text-decoration: none;
 }
@@ -16,14 +15,14 @@ a {
 
 /* Styles for header*/
 
-header{
+header {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     background-color: darkblue;
     width: 100%;
     height: 100px;
-    align-items:center;
-    position:fixed;
+    align-items: center;
+    position: fixed;
     z-index: 1;
     box-sizing: border-box;
     margin-top: 0px;
@@ -31,9 +30,9 @@ header{
 }
 
 header .mon-menu {
-    position:relative;
+    position: relative;
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     align-items: center;
     right: 0px;
     float: left;
@@ -41,38 +40,43 @@ header .mon-menu {
     box-sizing: border-box;
 }
 
-.monlogo{
-    position:relative;
-    width:25%;
+.monlogo {
+    position: relative;
+    width: 25%;
     left: 0px;
     height: 100px;
 }
+
 .monlogo img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
 }
-.mon-menu li a{
-    display:inline-block;
+
+.mon-menu li a {
+    display: inline-block;
     line-height: 100px;
     text-align: center;
     margin-right: 25px;
     color: white;
 }
-.mon-menu li a:hover{
-   border-bottom: 2px solid yellow;
-   background-color:rgba(169, 169, 169, 0.637);
-   color:yellow;
-   transition: all 1s ease;
-   font-style: italic;
+
+.mon-menu li a:hover {
+    border-bottom: 2px solid yellow;
+    background-color: rgba(169, 169, 169, 0.637);
+    color: yellow;
+    transition: all 1s ease;
+    font-style: italic;
 }
 
+
 /*Styles for the footer*/
+
 footer {
     width: 100%;
-    height: 100px;
+    height: 150px;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
     background-color: black;
     bottom: 0px;
@@ -82,41 +86,43 @@ footer {
 footer p {
     font-size: 25px;
     font-style: italic;
-    color: white;   
+    color: white;
 }
 
-.reseau-logo span{
+.reseau-logo span {
     display: inline-block;
     margin: 0px 25px;
 }
 
-.reseau-logo span i{
+.reseau-logo span i {
     color: white;
 }
 
-.reseau-logo span i:hover{
+.reseau-logo span i:hover {
     color: yellow;
 }
-.reseau-logo{
+
+.reseau-logo {
     display: flex;
     align-items: center;
- 
 }
+
 
 /*style for contact.html*/
 
-article{
-  display:flex;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  top: 101px;
-  height:500px;
-  box-sizing: border-box;
-  background-color: aqua;
+article {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    top: 101px;
+    height: 500px;
+    box-sizing: border-box;
+    background-color: aqua;
 }
+
 .all-contact {
-  width: 50%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -137,16 +143,18 @@ article{
     font-size: 35px;
 }
 
-.adresse,.email, .phone{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80%;
-  position: relative;
-  border-bottom: 2px solid darkblue;
-  margin: 35px auto;
- 
+.adresse,
+.email,
+.phone {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    position: relative;
+    border-bottom: 2px solid darkblue;
+    margin: 35px auto;
 }
+
 .phone p:first-child {
     color: maroon;
     font-size: 35px;
@@ -167,21 +175,19 @@ article{
     font-size: 25px;
 }
 
-
 .newletter h2 {
     font-size: 25px;
     text-align: center;
-    margin-top:15px;
+    margin-top: 15px;
 }
 
 .newletter {
     width: 50%;
     position: relative;
- 
 }
 
 .newletter form {
-    width:90%;
+    width: 90%;
     margin: 25px auto;
     position: relative;
     height: 400px;
@@ -191,7 +197,6 @@ article{
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 
 .newletter form div {
@@ -206,7 +211,6 @@ article{
     height: 40px;
     outline: none;
     border: 1px solid black;
-
 }
 
 .newletter form input[type="submit"] {
@@ -229,9 +233,10 @@ input[type="text"]:focus {
     border: 2px solid blue;
     font-size: 20px;
 }
+
 input[type="email"]:focus {
-  border: 2px solid blue;
-font-size: 20px;
+    border: 2px solid blue;
+    font-size: 20px;
 }
 
 #send:hover {
@@ -244,49 +249,46 @@ font-size: 20px;
     font-size: 25px;
     color: white;
 }
-.font-bars{
+
+.font-bars {
     display: none;
 }
+
+
 /*Styles for media query*/
 
-@media (min-width:500px) and (max-width:768px){
-    
-    
-    .font-bars{
+@media (min-width:500px) and (max-width:768px) {
+    .font-bars {
         color: white;
         font-size: 35px;
         top: 10px;
         position: absolute;
-        right:10px;
+        right: 10px;
         cursor: pointer;
         display: block;
     }
-
-    header{
-        display:flex;
-        justify-content:space-around;
+    header {
+        display: flex;
+        justify-content: space-around;
         background-color: darkblue;
         width: 100%;
         height: 70px;
     }
-    
     header .mon-menu {
-        position:absolute;
+        position: absolute;
         display: flex;
-        width:300px;
+        width: 300px;
         flex-direction: column;
         align-items: center;
         right: 0px;
         top: 70px;
-        background-color:darkblue;
+        background-color: darkblue;
         height: 600px;
         box-sizing: border-box;
         display: none;
         border-top: 2px solid white;
     }
-    
-    
-    .monlogo{
+    .monlogo {
         position: absolute;
         left: 0px;
         top: 5px;
@@ -296,139 +298,118 @@ font-size: 20px;
         height: 60px;
         border-radius: 50%;
     }
-
-    .mon-menu li{
+    .mon-menu li {
         display: block;
         width: 100%;
         height: 40px;
         /* margin-bottom: 25px; */
         margin-top: 50px;
     }
-    .mon-menu li a{
-        display:block;
+    .mon-menu li a {
+        display: block;
         width: 100%;
         position: relative;
         line-height: 50px;
         text-align: center;
         border-bottom: 1px solid white;
-        margin:0px;
+        margin: 0px;
         color: white;
     }
-
-    .mon-menu li a:hover{
-        border-bottom:none;
-        color:yellow;
+    .mon-menu li a:hover {
+        border-bottom: none;
+        color: yellow;
         transition: all 1s ease;
         font-style: italic;
-     }
-   
-
-     article{
-         display: flex;
-         flex-direction: column;
-         height: auto;
-         top:71px;
-     }
-
-     .all-contact{
-         width: 100%;
-     }
-
-     .newletter{
-         width: 100%;
-     }
-
-     .newletter form {
-        width:100%;
+    }
+    article {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        top: 71px;
+    }
+    .all-contact {
+        width: 100%;
+    }
+    .newletter {
+        width: 100%;
+    }
+    .newletter form {
+        width: 100%;
         margin: 25px auto;
     }
-    
     .newletter form div {
         display: flex;
         flex-direction: column;
         margin: 25px;
     }
-    
     .newletter form input {
         width: 90%;
         position: relative;
         height: 40px;
         outline: none;
         border: 1px solid black;
-    
     }
-    
     .newletter form input[type="submit"] {
         width: 60%;
         height: 45px;
-        left:0px;
+        left: 0px;
         display: block;
         margin: 25px auto;
         position: relative;
     }
-
     .adresse p:first-child {
         color: maroon;
-        font-size:25px;
+        font-size: 25px;
     }
-    
     .email p:first-child {
         color: maroon;
-        font-size:25px;
+        font-size: 25px;
     }
     .phone p:first-child {
         color: maroon;
         font-size: 25px;
     }
-
-    .adresse, .email, .phone{
+    .adresse,
+    .email,
+    .phone {
         width: 90%;
     }
-
     .phone p:nth-child(2) {
         color: darkblue;
-        font-size:20px;
+        font-size: 20px;
     }
 }
 
-@media (min-width:768px) and (max-width:1024px){
-
+@media (min-width:768px) and (max-width:1024px) {
     .newletter form input[type="submit"] {
         width: 60%;
         height: 45px;
-        left:0px;
+        left: 0px;
         display: block;
         margin: 25px auto;
         position: relative;
     }
-
     .newletter form div {
         display: flex;
         flex-direction: column;
         margin: 25px;
     }
-    
     .newletter form input {
         width: 90%;
         position: relative;
         height: 40px;
         outline: none;
         border: 1px solid black;
-    
     }
 }
 
-@media (min-width:1024px) and (max-width:1388px){
-
+@media (min-width:1024px) and (max-width:1388px) {
     .newletter form input[type="submit"] {
         width: 60%;
         height: 45px;
-        left:0px;
+        left: 0px;
         display: block;
         margin: 25px auto;
         position: relative;
     }
-
 }
-
-
