--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -73,14 +73,14 @@ header .mon-menu {
 /*Styles for the footer*/
 
 footer {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 150px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: black;
-    bottom: 0px !important;
+    bottom: 0px;
     margin-top: 100px !important;
 }
 
@@ -116,7 +116,7 @@ main {
     justify-content: center;
     top: 101px;
     position: relative;
-    height: 650px;
+    height: 600px;
     box-sizing: border-box;
     width: 100%;
     /* border: 1px solid red; */
@@ -125,7 +125,7 @@ main {
 .testimony {
     position: relative;
     width: 60%;
-    height: 550px;
+    height: 500px;
     border-bottom: 2px solid blue;
     display: flex;
     flex-direction: column;
@@ -159,7 +159,7 @@ main {
 .witness {
     position: relative;
     width: 40%;
-    height: 550px;
+    height: 500px;
     /* border: 1px solid red; */
 }
 
