--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -74,6 +74,7 @@ header .mon-menu {
 
 footer {
     position: absolute;
+    /*to be absolute*/
     width: 100%;
     height: 150px;
     display: flex;
